force-app/main/default/objects/Ride_Rating__c/Ride_Rating__c.object-meta.xml
<CustomObject>
    <label>Ride Rating</label>
    <nameField>
        <label>Ride Rating Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ride Rating</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>