force-app/main/default/objects/Ride_Rating__c/fields/Average_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Score__c</fullName>
    <description>Average score of the riders</description>
    <formula>(Discipline__c + Leadership__c + Safety__c + Skill__c + Teamwork__c)/5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average score of the riders</inlineHelpText>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>