force-app/main/default/objects/Ride_Rating__c/fields/Discipline__c.field-meta.xml
<CustomField>
    <fullName>Discipline__c</fullName>
    <label>Discipline</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>