force-app/main/default/objects/Ride_Rating__c/fields/Leadership__c.field-meta.xml
<CustomField>
    <fullName>Leadership__c</fullName>
    <label>Leadership</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>