force-app/main/default/objects/Ride_Rating__c/fields/Rated_By__c.field-meta.xml
<CustomField>
    <fullName>Rated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ride_Rating</relationshipName>
    <type>Lookup</type>
</CustomField>