force-app/main/default/objects/Ride_Rating__c/fields/Ride__c.field-meta.xml
<CustomField>
    <fullName>Ride__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ride</label>
    <referenceTo>Ride__c</referenceTo>
    <relationshipLabel>Ride Rating</relationshipLabel>
    <relationshipName>Ride_Rating</relationshipName>
    <type>Lookup</type>
</CustomField>