force-app/main/default/objects/Ride_Rating__c/fields/Safety__c.field-meta.xml
<CustomField>
    <fullName>Safety__c</fullName>
    <label>Safety</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>