force-app/main/default/objects/Ride_Rating__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>