force-app/main/default/objects/Ride_Rating__c/fields/Teamwork__c.field-meta.xml
<CustomField>
    <fullName>Teamwork__c</fullName>
    <label>Teamwork</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>