force-app/main/default/objects/Ride_Rating__c/validationRules/Limit_Score_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_Score_Value</fullName>
    <active>true</active>
    <errorConditionFormula>OR (
  AND (Safety__c &gt; 10, Safety__c &lt; 0),
  AND (Skill__c &gt; 10, Skill__c &lt; 0),
  AND (Teamwork__c &gt; 10, Teamwork__c &lt; 0),
  AND (Leadership__c &gt; 10, Leadership__c &lt; 0),
  AND (Discipline__c &gt; 10, Discipline__c &lt; 0)
)</errorConditionFormula>
    <errorMessage>Please Enter a Value Between 0 to 10</errorMessage>
</ValidationRule>